refactor: menu auth

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,9 @@
 <div class="p-d-flex p-flex-column">
   <!-- Produção -->
-  <!-- <app-menu *ngIf="isAuthenticate"></app-menu>
-  <app-speed-dial-button *ngIf="isAuthenticate"></app-speed-dial-button> -->
+  <app-menu *ngIf="isAuthenticate"></app-menu>
 
   <!-- Desenvolvimento -->
-  <app-menu></app-menu>
+  <!-- <app-menu></app-menu> -->
 
   <div style="margin-top: 20px">
     <router-outlet></router-outlet>
