feat: card click action

--- a/src/app/components/calendar/calendar.component.html
+++ b/src/app/components/calendar/calendar.component.html
@@ -1,7 +1,3 @@
 <div class="p-d-flex p-jc-center">
-  <p-calendar
-    (ngModel)="(value)"
-    [inline]="true"
-    [showWeek]="true"
-  ></p-calendar>
+  <p-calendar (ngModel)="(value)" [inline]="true" [showWeek]="true"></p-calendar>
 </div>
