--- a/src/app/components/transactions/transactions.component.html
+++ b/src/app/components/transactions/transactions.component.html
@@ -1,3 +1,5 @@
-<div class="p-d-flex p-jc-center" style="padding: 20px">
+<div class="p-d-flex p-jc-center transaction" style="padding: 20px">
+  <!-- <a href="/wallets" target="_blank" rel="noopener noreferrer"> -->
   <app-card-transaction></app-card-transaction>
+  <!-- </a> -->
 </div>
