--- a/src/app/components/transactions/components-addons/card-transaction/card-transaction.component.scss
+++ b/src/app/components/transactions/components-addons/card-transaction/card-transaction.component.scss
@@ -1,3 +1,10 @@
+.card {
+  button {
+    background-color: transparent;
+    box-shadow: none;
+    border: none;
+  }
+}
 .card-transaction {
   display: flex;
   flex-direction: row;
@@ -12,6 +19,16 @@
   margin-bottom: 20px;
   height: 10vh;
   width: 50vw;
+
+  &:hover {
+    background-image: linear-gradient(76.3deg, #1275cc 12.6%, #a5bfd5 82.8%);
+  }
+
+  &:active {
+    background-color: #3e8e41;
+    box-shadow: 0 3px #25425c;
+    transform: translateY(4px);
+  }
 }
 
 .icon {
