--- a/src/app/components/transactions/components-addons/card-transaction/card-transaction.component.scss
+++ b/src/app/components/transactions/components-addons/card-transaction/card-transaction.component.scss
@@ -9,11 +9,7 @@
   display: flex;
   flex-direction: row;
 
-  background-image: linear-gradient(
-    76.3deg,
-    rgba(44, 62, 78, 1) 12.6%,
-    rgba(69, 103, 131, 1) 82.8%
-  );
+  background-image: linear-gradient(76.3deg, #2c3e4e 12.6%, #456783 82.8%);
   border-radius: 10px;
 
   margin-bottom: 20px;
