refactor: create wallet

--- a/src/app/components/wallets/components-addons/create-wallets/create-wallets.component.html
+++ b/src/app/components/wallets/components-addons/create-wallets/create-wallets.component.html
@@ -1,4 +1,4 @@
-<form action="">
+<form [formGroup]="newWallet">
   <div class="p-fluid p-formgrid p-grid p-d-flex p-jc-center">
     <div class="p-field p-col-10">
       <div class="p-inputgroup">
