refactor: shared service getAllWallets

--- a/src/app/components/carousel-wallets/carousel-wallets.component.scss
+++ b/src/app/components/carousel-wallets/carousel-wallets.component.scss
@@ -41,6 +41,14 @@
   color: #ff4b55;
 }
 
+.balance {
+  font-weight: 700;
+  margin-top: 5px;
+  margin-bottom: 2px;
+  font-size: 2rem;
+  color: #ffffff;
+}
+
 .income-bar {
   background-color: #33c759;
   height: 100%;
