--- a/src/app/components/carousel-wallets/carousel-wallets.component.html
+++ b/src/app/components/carousel-wallets/carousel-wallets.component.html
@@ -10,19 +10,22 @@
       <div class="p-d-flex p-flex-column">
         <div class="p-d-flex p-jc-center">
           <div class="card">
-            <h1 class="p-mb-1">{{ wallet.name }}</h1>
+            <div class="p-d-flex p-jc-between p-ai-center">
+              <h1 class="p-mb-1">{{ wallet.name }}</h1>
+              <h4 class="balance">{{ wallet.balance }}</h4>
+            </div>
             <div class="graphic-bar">
-              <div class="income-bar" style="width: {{ bars[wallet.id].barIncome }}%"></div>
-              <div class="outcome-bar" style="width: {{ bars[wallet.id].barOutcome }}%  "></div>
+              <div class="income-bar" style="width: {{ wallet.bartIncome }}%"></div>
+              <div class="outcome-bar" style="width: {{ wallet.barOutcome }}%  "></div>
             </div>
             <div class="p-d-flex p-jc-between">
               <div class="p-d-flex p-flex-column p-ai-start">
-                <span class="income">{{ bars[wallet.id].barIncome }} %</span>
+                <span class="income">{{ wallet.bartIncome }} %</span>
                 <h4 class="income">{{ functionalities.formatCurrency(wallet.income) }}</h4>
               </div>
 
               <div class="p-d-flex p-flex-column p-ai-end">
-                <span class="outcome">{{ bars[wallet.id].barOutcome }} %</span>
+                <span class="outcome">{{ wallet.barOutcome }} %</span>
                 <h4 class="outcome">
                   {{ functionalities.formatCurrency(wallet.outcome) }}
                 </h4>
